<resources>
    <string name="app_name">ARM manager</string>
    <string name="title_activity_main_menu">MainActivityMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Имя пользователя</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="requests">Заявки</string>
    <string name="anal">Аналитика</string>
    <string name="products">Продукция</string>
    <string name="account">Аккаунт</string>
    <string name="log_out">Выйти</string>
    <string name="add_position">Добавить позицию</string>
    <string name="number_request">Номер заявки</string>
    <string name="name_request">Наименование</string>
    <string name="creation_date">Дата создания</string>
    <string name="customer">Заказчик</string>
    <string name="plan_date">Плановая дата закрытия заявки</string>
    <string name="fact_date">Фактическая дата закрытия заявки</string>
    <string name="list_positions">Перечень позиций:</string>
    <string name="user_name">Имя пользователя</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="confirm_password">Подтверждение пароля</string>
    <string name="save">Сохранить</string>
    <string name="change_password">Изменить пароль</string>
    <string name="add_request">Добавить заявку</string>
    <string name="add_product">Добавить продукцию</string>
    <string name="registration">Регистрация</string>
    <string name="done">Готово</string>
    <string name="enter">Войти</string>
    <string name="first_time">Первый раз?</string>
    <string name="log_in">Авторизация</string>
    <string name="forgot_pass">Забыли пароль?</string>
    <string name="add_name_position">Добавьте наименование позиции</string>
    <string name="name_product">Наименование продукции</string>
    <string name="please_wait">Запрос выполняется.\nПожалуйста подождите...</string>
</resources>