<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_1"
            android:icon="@drawable/ic_menu_request"
            android:title="@string/requests" />
        <item
            android:id="@+id/nav_anal"
            android:icon="@drawable/ic_menu_anal"
            android:title="@string/anal" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_menu_status"
            android:title="@string/products" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/account" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_exit"
            android:title="@string/log_out" />
    </group>
</menu>